* Renamed obfuscate_js back to obfuscate_filenames, as CSS filenames are now obfuscated just the same time as JS files. (install.php, ManageServer.php, QueryString.php, Help.english.php, Help.french.php, ManageSettings.english.php, ManageSettings.french.php) * Restored alternating backgrounds in the board list, only horizontally this time... Not that I find this more exciting... Just wanna find out which is best. (BoardIndex.template.php) ! Toggle icon padding was incorrect in the news fader. (Warm/sections.css) * Replaced toggle icons with way sexier ones (modified FamFam). Don't thank me. (collapse.gif, expand.gif) * Prevent double-clicking the toggle icons. (script.js) * Maintenance area was flooded with cat bars. Seriously, title bars are the way to go here. (ManageMaintenance.template.php)

--- a/Themes/default/css/Warm/sections.css
+++ b/Themes/default/css/Warm/sections.css
@@ -1399,6 +1399,10 @@ span.hidelink
 	display: none
 	margin: 4px -5px 0 0
 
+// !!! Remove this once we implement class="openclose" on toggles...
+#newsupshrink
+	margin-top: 4px
+
 // table_grid styles for Profile > Show Permissions.
 #permissions table.table_grid td
 	padding: .4em .8em
